# Portfolio

MMUNET/: 0_train.py  1_test.py  README.md  backbone.py  multi_unet2d.py  multi_unet2d_attention.py  multi_unet2d_r2.py  multi_unet2d_r2att.py  unet_model.py  utils.py
U-Net/: README.md
UNET_R2UNET_Attn_UNET/: README.md
final/: audio_processing.py  config.py  database.py  face_recognition_module.py  lip_sync_analysis.py  main.py  meeting_analyzer.py  requirements.txt  speaker_diarization.py  test_mode.py  utils.py
final/result/: meeting_summary.txt
project/food_order_system/: alembic.ini  pyproject.toml  대전_맛집_리스트.xlsx
project/food_order_system/alembic/: env.py
project/food_order_system/alembic/versions/: 3fe432c99deb_add_length_to_varchar_columns.py  47dce06c086f_update_restaurant_and_review_models.py  91a5bc092afa_initial_migration.py
project/food_order_system/app/: main.py
project/food_order_system/app/api/v1/: endpoints.py
project/food_order_system/app/core/: config.py  core.py
project/food_order_system/app/db/: db.py
project/food_order_system/app/models/: models.py
project/food_order_system/app/schemas/: schemas.py
project/food_order_system/migrations/: env.py
project/food_order_system/tests/api/: test_users.py
project/food_recommendation_frontend/: README.md  package-lock.json  package.json  vue.config.js
project/food_recommendation_frontend/public/: index.html
project/food_recommendation_frontend/src/: App.vue  components.js  main.js  services.js
project/food_recommendation_frontend/src/assets/: hearthstone-tavern.css
(+31 files in other folders)
